[package]
name = "hyper-http1-server-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
async-compression = { version = "0.4.18", features = ["all"] }
